# discord-archiver

./: .gitignore  README.md  api.py  discord-archiver.spec  main.py  main.spec  pyproject.toml
.github/workflows/: main.yml
src/: api.py  main.py  tests.py
